# src/main/java/edu/uniquindio/stayhub_v2/dto/accommodation/AccommodationDetailResponseDTO.java
@@ -28,5 +28,6 @@ public record AccommodationDetailResponseDTO(
         AccommodationLegalInfoDTO legal,
         LocalDateTime createdAt,
         LocalDateTime updatedAt,
-        RentalType rentalType
+        RentalType rentalType,
+        List<AccommodationServiceDTO> services
 ) {}
